8238961: Assertion failure in new field layout code when ContendedPaddingWidth == 0

Reviewed-by: hseigel, coleenp